package java101.Java50_UniversityDiagram.classes;

public class Classroom {
}
