package java101.Java50_UniversityDiagram.classes;

import java.util.List;

public class Department {
    private Office office;
    private List<Employee> employees;
}
