package java101.Java50_UniversityDiagram.classes;

public class Office {
    private Employee employee;
}
