package java101.Java50_UniversityDiagram.classes;

public class Professor extends Employee{
}
