@startuml

title __CLASSES's Class Diagram__\n

  namespace java101 {
    namespace Java50_UniversityDiagram.classes {
      class java101.Java50_UniversityDiagram.classes.Classroom {
      }
    }
  }
  

  namespace java101 {
    namespace Java50_UniversityDiagram.classes {
      class java101.Java50_UniversityDiagram.classes.Department {
          - employees : List<Employee>
      }
    }
  }
  

  namespace java101 {
    namespace Java50_UniversityDiagram.classes {
      class java101.Java50_UniversityDiagram.classes.Employee {
          - name : String
          - position : String
      }
    }
  }
  

  namespace java101 {
    namespace Java50_UniversityDiagram.classes {
      class java101.Java50_UniversityDiagram.classes.Office {
      }
    }
  }
  

  namespace java101 {
    namespace Java50_UniversityDiagram.classes {
      class java101.Java50_UniversityDiagram.classes.Officer {
      }
    }
  }
  

  namespace java101 {
    namespace Java50_UniversityDiagram.classes {
      class java101.Java50_UniversityDiagram.classes.Professor {
      }
    }
  }
  

  namespace java101 {
    namespace Java50_UniversityDiagram.classes {
      class java101.Java50_UniversityDiagram.classes.University {
          - classrooms : List<Classroom>
          - departments : List<Department>
          - employees : List<Employee>
      }
    }
  }
  

  java101.Java50_UniversityDiagram.classes.Department o-- java101.Java50_UniversityDiagram.classes.Office : office
  java101.Java50_UniversityDiagram.classes.Office o-- java101.Java50_UniversityDiagram.classes.Employee : employee
  java101.Java50_UniversityDiagram.classes.Officer -up-|> java101.Java50_UniversityDiagram.classes.Employee
  java101.Java50_UniversityDiagram.classes.Professor -up-|> java101.Java50_UniversityDiagram.classes.Employee


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
